[gd_scene load_steps=2 format=3 uid="uid://b7o0j0a4dvew6"]

[ext_resource type="Script" path="res://levels/waves.gd" id="1_sgdtb"]

[node name="Waves" type="Node"]
script = ExtResource("1_sgdtb")

[node name="SpawnDelayTimer" type="Timer" parent="."]

[node name="WaveStartDelayTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="timeout" from="WaveStartDelayTimer" to="." method="next_wave"]
